# k1-walk-mujoco

./: .gitignore  README.md  pyproject.toml
assets/: README.md  manifest.json
configs/: env_k1_walk.yaml  eval_suites_goal_pose.yaml  eval_suites_goal_pose_holdout.yaml  gait_param_15.yaml  milestone_gates.yaml  optimise_gait.yaml  optimise_gait_smoke.yaml  robot_k1_pd.yaml  train_ppo_cleanrl.yaml  train_ppo_m0.yaml  train_ppo_m1.yaml  train_ppo_m1_really_easy.yaml  train_ppo_m2.yaml  train_ppo_m2_candidate_b_stage1.yaml  train_ppo_m2_candidate_b_stage1b.yaml  train_ppo_m2_candidate_b_stage1c.yaml  train_ppo_m2_candidate_b_stage1d.yaml  train_ppo_m2_candidate_b_stage2.yaml  train_ppo_m3.yaml  train_ppo_m4.yaml  train_ppo_m5.yaml
docs/: experiment_log.md  experiment_workflow.md  holosoma_mjwarp_2080ti.md
experiments/: README.md  experiments.md
old-experiments/: experiments.md
scripts/: calibrate_milestone_gates.py  export_dataset_rollouts.py  fetch_assets.py  generate_experiment_summary.py  launch_m2_candidate_b.sh  launch_m2_highutil.sh  milestone_report.py  optimise_gait_params.py  record_holosoma_run.py  rollout.py  run_holosoma_mjwarp_training.sh  run_milestones.py  setup_holosoma_mjwarp_uv.sh  smoke_holosoma_mjwarp.sh  smoke_mujoco.py  sync_remote_experiment.sh  train_cleanrl_ppo.py  upgrade_nvidia_driver_ubuntu.sh
tests/: test_assets_present.py  test_calibrate_milestone_gates.py  test_cleanrl_utils.py  test_env_math.py  test_env_modes_smoke.py  test_env_step.py  test_eval_holdout_suite.py  test_goal_pose_logic.py  test_milestone_gates.py  (+4 more)
(+76 files in other folders)
